added more indicators

--- a/multi_chat_exploration.ipynb
+++ b/multi_chat_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -212,11 +212,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¿Cuál es el tiempo promedio que tardamos en responder?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyme_filter = all_chats[\"sender_name\"].str.strip()=='A n e m o n e'\n",
+    "pyme_messages = all_chats[pyme_filter]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_response = pyme_messages.delta_mensajes_minutos.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensaje_respuesta_promedio = f\"Usted se tarda en promedio {int(mean_response)} minutos en responder a sus clientes.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usted se tarda en promedio 17 minutos en responder a sus clientes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mensaje_respuesta_promedio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tiempo promedio de respuesta de clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_client_response = client_messages.delta_mensajes_horas.mean()\n",
+    "mensaje_respuesta_promedio_cliente = f\"Sus clientes se tardan en promedio {int(mean_client_response)} horas en responderle.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sus clientes se tardan en promedio 5 horas en responderle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mensaje_respuesta_promedio_cliente)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Palabras más usadas por Pyme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import download\n",
+    "download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('<multimedia', 16),\n",
+       " ('omitido>', 16),\n",
+       " ('si', 11),\n",
+       " ('gracias', 9),\n",
+       " ('n', 8),\n",
+       " ('rosas', 7),\n",
+       " ('bouquet', 5),\n",
+       " ('favor', 5),\n",
+       " ('comunicarte', 4),\n",
+       " ('m', 4),\n",
+       " ('e.', 4),\n",
+       " ('¿cómo', 4),\n",
+       " ('podemos', 4),\n",
+       " ('ayudarte?💐🙂', 4),\n",
+       " ('🙂', 4),\n",
+       " ('cotización', 4),\n",
+       " ('🌟', 4),\n",
+       " ('entrega', 4),\n",
+       " ('compra', 3),\n",
+       " ('excelente', 3)]"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spanish_stopwords = stopwords.words('spanish')\n",
+    "words = \" \".join(pyme_messages[\"content\"]).split()\n",
+    "filtered_words = [word for word in words if word not in spanish_stopwords]\n",
+    "pymes_top20_palabras = list(Counter(filtered_words).most_common(20))\n",
+    "pymes_top20_palabras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Palabras más usadas por Clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('<multimedia', 9),\n",
+       " ('omitido>', 9),\n",
+       " ('si', 9),\n",
+       " ('!', 6),\n",
+       " ('rosas', 5),\n",
+       " ('gracias', 5),\n",
+       " ('perfecto!', 5),\n",
+       " ('buenas', 4),\n",
+       " ('ramo', 4),\n",
+       " ('quiero', 4),\n",
+       " ('okay', 4),\n",
+       " ('muchas', 4),\n",
+       " ('perfecto', 4),\n",
+       " ('mejor', 3),\n",
+       " ('pues', 3),\n",
+       " ('casa', 3),\n",
+       " ('día', 3),\n",
+       " ('excelente', 3),\n",
+       " ('mamá', 3),\n",
+       " ('depósito', 3)]"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spanish_stopwords = stopwords.words('spanish')\n",
+    "words = \" \".join(client_messages[\"content\"]).split()\n",
+    "filtered_words = [word for word in words if word not in spanish_stopwords]\n",
+    "Counter(filtered_words).most_common(20)"
+   ]
   }
  ],
  "metadata": {
